--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitest/ui": "^3.1.3",
+    "jest-extended": "^4.0.2",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
+  },
+  "dependencies": {
+    "paper": "^0.12.18"
   }
 }
