--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "vitest",
+    "test": "vitest run --config vitest.config.ts",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -17,6 +17,7 @@
     "vitest": "^3.1.3"
   },
   "dependencies": {
-    "paper": "^0.12.18"
+    "paper": "^0.12.18",
+    "tweakpane": "^4.0.5"
   }
 }
