--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "devDependencies": {
     "@vitest/ui": "^3.1.3",
     "jest-extended": "^4.0.2",
+    "prettier": "^3.5.3",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
   },
   "dependencies": {
-    "paper": "^0.12.18",
-    "tweakpane": "^4.0.5"
+    "paper": "^0.12.18"
   }
 }
