--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vitest": "^3.1.3"
   },
   "dependencies": {
-    "paper": "^0.12.18"
+    "@types/randomcolor": "^0.5.9",
+    "paper": "^0.12.18",
+    "randomcolor": "^0.6.2"
   }
 }
