--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
 
             - name: Build project
               run: pnpm run build
+              env:
+                  VITE_BASE_PATH: /folding-rain/
 
             - name: Upload production-ready build files
               uses: actions/upload-artifact@v4
