--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-    "name": "folding-rain",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "test": "vitest run --config vitest.config.ts",
-        "build": "tsc && vite build --config vitest.config.ts",
-        "preview": "vite preview"
-    },
-    "devDependencies": {
-        "@vitest/ui": "^3.1.3",
-        "jest-extended": "^4.0.2",
-        "prettier": "^3.5.3",
-        "typescript": "~5.8.3",
-        "vite": "^6.3.5",
-        "vitest": "^3.1.3"
-    },
-    "dependencies": {
-        "@types/randomcolor": "^0.5.9",
-        "paper": "^0.12.18",
-        "randomcolor": "^0.6.2"
-    }
+  "name": "folding-rain",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "test": "vitest run --config vitest.config.ts",
+    "build": "tsc && vite build --config vitest.config.ts",
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-interactions": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/html": "^8.6.12",
+    "@storybook/html-vite": "^8.6.12",
+    "@storybook/test": "^8.6.12",
+    "@vitest/ui": "^3.1.3",
+    "jest-extended": "^4.0.2",
+    "prettier": "^3.5.3",
+    "storybook": "^8.6.12",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.1.3"
+  },
+  "dependencies": {
+    "@types/randomcolor": "^0.5.9",
+    "paper": "^0.12.18",
+    "randomcolor": "^0.6.2"
+  }
 }
