--- a/package.json
+++ b/package.json
@@ -12,16 +12,12 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-interactions": "^8.6.12",
-    "@storybook/blocks": "^8.6.12",
-    "@storybook/html": "^8.6.12",
-    "@storybook/html-vite": "^8.6.12",
-    "@storybook/test": "^8.6.12",
+    "@storybook/addon-docs": "^9.0.6",
+    "@storybook/html-vite": "^9.0.6",
     "@vitest/ui": "^3.1.3",
     "jest-extended": "^4.0.2",
     "prettier": "^3.5.3",
-    "storybook": "^8.6.12",
+    "storybook": "^9.0.6",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
