--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "prettier": "^3.5.3",
     "storybook": "^9.0.6",
     "typescript": "~5.8.3",
-    "vite": "^6.3.5",
-    "vitest": "^3.1.3"
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@types/randomcolor": "^0.5.9",
     "paper": "^0.12.18",
-    "randomcolor": "^0.6.2"
+    "random-seedable": "^1.0.8",
+    "randomcolor": "^0.6.2",
+    "vitest": "^3.2.3"
   }
 }
