--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
     push:
         branches:
             - main
+            - publish
 
 jobs:
     test:
@@ -63,7 +64,7 @@ jobs:
         name: Deploy
         needs: build
         runs-on: ubuntu-latest
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/publish'
 
         steps:
             - name: Download artifact
