--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "folding-rain",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "test": "vitest run --config vitest.config.ts",
-    "build": "tsc && vite build --config vitest.config.ts",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "devDependencies": {
-    "@storybook/addon-docs": "^9.0.11",
-    "@storybook/html-vite": "^9.0.11",
-    "@vitest/ui": "^3.1.3",
-    "jest-extended": "^4.0.2",
-    "prettier": "^3.5.3",
-    "storybook": "^9.0.11",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5"
-  },
-  "dependencies": {
-    "@types/randomcolor": "^0.5.9",
-    "paper": "^0.12.18",
-    "random-seedable": "^1.0.8",
-    "randomcolor": "^0.6.2",
-    "vitest": "^3.2.3"
-  }
+    "name": "folding-rain",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "test": "vitest run --config vitest.config.ts",
+        "build": "tsc --noEmit && vite build --config vitest.config.ts || vite build --config vitest.config.ts",
+        "preview": "vite preview",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
+    },
+    "devDependencies": {
+        "@storybook/addon-docs": "^9.0.11",
+        "@storybook/html-vite": "^9.0.11",
+        "@vitest/ui": "^3.1.3",
+        "jest-extended": "^4.0.2",
+        "prettier": "^3.5.3",
+        "storybook": "^9.0.11",
+        "typescript": "~5.8.3",
+        "vite": "^6.3.5"
+    },
+    "dependencies": {
+        "@types/randomcolor": "^0.5.9",
+        "paper": "^0.12.18",
+        "random-seedable": "^1.0.8",
+        "randomcolor": "^0.6.2",
+        "vitest": "^3.2.3"
+    }
 }
