add type defs (0.0.2)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "verbatimModuleSyntax": true,
         "moduleDetection": "force",
         "noEmit": false,
+        "declaration": true,
         "outDir": "dist",
 
         /* Linting */
