--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@a-robu/folding-rain",
     "private": false,
-    "version": "0.0.3",
+    "version": "0.0.5",
     "type": "module",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -14,7 +14,7 @@
     "scripts": {
         "dev": "vite",
         "test": "vitest run --config vitest.config.ts",
-        "build": "tsc",
+        "build": "tsc && tsc-alias",
         "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build"
@@ -26,14 +26,15 @@
         "jest-extended": "^4.0.2",
         "prettier": "^3.5.3",
         "storybook": "^9.0.11",
+        "tsc-alias": "^1.8.16",
         "typescript": "~5.8.3",
-        "vite": "^6.3.5"
+        "vite": "^6.3.5",
+        "vitest": "^3.2.3"
     },
     "dependencies": {
         "@types/randomcolor": "^0.5.9",
         "paper": "^0.12.18",
         "random-seedable": "^1.0.8",
-        "randomcolor": "^0.6.2",
-        "vitest": "^3.2.3"
+        "randomcolor": "^0.6.2"
     }
 }
