--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
         "vitest": "^3.2.3"
     },
     "dependencies": {
-        "@types/randomcolor": "^0.5.9",
         "paper": "^0.12.18",
-        "random-seedable": "^1.0.8",
-        "randomcolor": "^0.6.2"
+        "random-seedable": "^1.0.8"
     }
 }
